# is-terminal

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: stdio.rs
src/: lib.rs
