[package]
name = "is-terminal"
version = "0.0.1-alpha.0"
authors = [
    "softprops <d.tangren@gmail.com>",
    "Dan Gohman <dev@sunfishcode.online>"
]
description = "Test whether a given stream is a terminal"
documentation = "http://docs.rs/is-terminal"
repository = "https://github.com/sunfishcode/is-terminal"
keywords = ["terminal", "tty", "isatty"]
categories = ["command-line-interface"]
license = "MIT"
exclude = ["/.github"]
edition = "2018"

[dependencies]
io-lifetimes = "0.6.0"

[target.'cfg(not(any(windows, target_os = "hermit")))'.dependencies]
rustix = "0.34.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-abi = "0.2.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["consoleapi", "processenv", "minwinbase", "minwindef", "winbase"]

[dev-dependencies]
atty = "0.2.14"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.110"
