[package]
name = "is-terminal"
version = "0.4.0"
authors = [
    "softprops <d.tangren@gmail.com>",
    "Dan Gohman <dev@sunfishcode.online>"
]
description = "Test whether a given stream is a terminal"
documentation = "http://docs.rs/is-terminal"
repository = "https://github.com/sunfishcode/is-terminal"
keywords = ["terminal", "tty", "isatty"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2018"
include = ["src", "build.rs", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]

[dependencies]
io-lifetimes = "1.0.0"

[target.'cfg(not(any(windows, target_os = "hermit", target_os = "unknown")))'.dependencies]
rustix = { version = "0.36.4", features = ["termios"] }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-abi = "0.2.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]

[dev-dependencies]
atty = "0.2.14"

[target.'cfg(any(unix, target_os = "wasi"))'.dev-dependencies]
libc = "0.2.110"
