[package]
name = "is-terminal"
version = "0.4.9"
authors = [
    "softprops <d.tangren@gmail.com>",
    "Dan Gohman <dev@sunfishcode.online>"
]
description = "Test whether a given stream is a terminal"
documentation = "https://docs.rs/is-terminal"
repository = "https://github.com/sunfishcode/is-terminal"
keywords = ["terminal", "tty", "isatty"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2021"
include = ["src", "build.rs", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]
rust-version = "1.63"

[target.'cfg(any(unix, target_os = "wasi"))'.dependencies]
rustix = { version = "0.38.0", features = ["termios"], default-features = false, optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-abi = "0.3.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]

[dev-dependencies]
atty = "0.2.14"

[target.'cfg(any(unix, target_os = "wasi"))'.dev-dependencies]
rustix = { version = "0.38.0", features = ["termios", "stdio"] }
libc = "0.2.110"

[target.'cfg(windows)'.dev-dependencies]
tempfile  = "3"

[features]
default = ["std", "libc"]
std = []

# rustix using std.
rustix-std = ["std", "rustix/std"]

# rustix using no_std.
rustix-no_std = ["rustix"]
